--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,9 +26,10 @@ target_include_directories(derivative PUBLIC ${MUJOCO_INCLUDE_DIR})
 target_link_libraries(derivative ${MUJOCO_LIB} ${MUJOCO_EXTERN_LIBS})
 
 
-# add_executable(traj_opt traj_opt_main.cpp)
-# target_include_directories(traj_opt PUBLIC ${Ipopt_INCLUDE_DIR})
-# target_link_libraries(traj_opt PUBLIC ${Ipopt_LIB} ${Ipopt_THIRDPARTY_LIBS})
+add_executable(traj_opt traj_opt_main.cpp)
+target_include_directories(traj_opt PUBLIC ${Ipopt_INCLUDE_DIR}
+	${EIGEN3_INCLUDE_DIR})
+target_link_libraries(traj_opt PUBLIC ${Ipopt_LIB} ${Ipopt_THIRDPARTY_LIBS})
 #
 add_executable(test_eigen test_eigen.cpp)
 target_include_directories(test_eigen PUBLIC ${Ipopt_INCLUDE_DIR}
