first try of stacked constriants works

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,8 +27,8 @@ add_executable(constraintTest test/constraintTest.cpp)
 target_link_libraries(constraintTest PUBLIC GTest::GTest GTest::Main)
 target_link_libraries(constraintTest PUBLIC trajectoryOptimizationLib)
 
-add_test(allTrajectoryOptimizationLibraryTest costTest)
-add_test(allTrajectoryOptimizationLibraryTest constraintTest)
+add_test(optimizationCostTest costTest)
+add_test(optimizationConstriantTest constraintTest)
 
 
 
