working on dynamicViolation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,9 +31,14 @@ add_executable(dynamicTest test/dynamicTest.cpp)
 target_link_libraries(dynamicTest PUBLIC GTest::GTest GTest::Main)
 target_link_libraries(dynamicTest PUBLIC trajectoryOptimizationLib)
 
+add_executable(utilitiesTest test/utilitiesTest.cpp)
+target_link_libraries(utilitiesTest PUBLIC GTest::GTest GTest::Main)
+target_link_libraries(utilitiesTest PUBLIC trajectoryOptimizationLib)
+
 add_test(costTest costTest)
 add_test(constriantTest constraintTest)
 add_test(dynamicTest dynamicTest)
+add_test(utilitiesTest utilitiesTest)
 
 
 
